--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
+    "@supabase/supabase-js": "^2.49.4",
     "expo": "~53.0.9",
+    "expo-notifications": "^0.31.2",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.2",
-    "react-native-web": "^0.20.0",
     "react-dom": "19.0.0",
-    "@expo/metro-runtime": "~5.0.4"
+    "react-native": "0.79.2",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
