--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/native-stack": "^7.3.13",
     "@supabase/supabase-js": "^2.49.4",
     "expo": "~53.0.9",
     "expo-notifications": "^0.31.2",
