--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@react-navigation/native-stack": "^7.3.13",
     "@supabase/supabase-js": "^2.49.4",
     "expo": "~53.0.9",
+    "expo-image-picker": "^16.1.4",
     "expo-notifications": "^0.31.2",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.10.0",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
