--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-web": "^0.20.0",
-    "yet": "^0.1.0"
+    "yet": "^0.1.0",
+    "expo-av": "~15.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
