--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "react-native-screens": "^4.10.0",
     "react-native-web": "^0.20.0",
     "yet": "^0.1.0",
-    "expo-av": "~15.1.4"
+    "expo-av": "~15.1.4",
+    "@react-native-picker/picker": "2.11.0",
+    "expo-document-picker": "~13.1.5",
+    "expo-audio": "~0.4.5",
+    "expo-video": "~2.1.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
