commit para ajeitar metro.config e paginas com usestate

--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "@supabase/supabase-js": "^2.49.4",
     "expo": "~53.0.9",
+    "expo-av": "~15.1.4",
+    "expo-document-picker": "^13.1.5",
     "expo-image-picker": "^16.1.4",
     "expo-notifications": "^0.31.2",
     "expo-status-bar": "~2.2.3",
@@ -23,8 +26,7 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-web": "^0.20.0",
-    "yet": "^0.1.0",
-    "expo-av": "~15.1.4"
+    "yet": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
