--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^7.3.13",
     "@supabase/supabase-js": "^2.49.4",
     "expo": "~53.0.9",
+    "expo-audio": "^0.4.5",
     "expo-av": "~15.1.4",
     "expo-document-picker": "^13.1.5",
     "expo-image-picker": "^16.1.4",
