--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "@supabase/supabase-js": "^2.49.4",
+    "buffer": "^6.0.3",
     "expo": "~53.0.9",
     "expo-audio": "^0.4.5",
     "expo-av": "~15.1.4",
